WIP
Resolves:
BI-8467
